--- a/pages/mine/mine.wxml
+++ b/pages/mine/mine.wxml
@@ -1,9 +1,49 @@
 <!--pages/mine/mine.wxml-->
-<view class="userinfo">
+<view class="page">
+  <view class="userinfo">
     <button wx:if="{{!hasUserInfo && canIUse}}" open-type="getUserInfo" bindgetuserinfo="getUserInfo"> 获取头像昵称 </button>
     <block wx:else>
-      <image style="width: 100rpx; height: 100rpx;" bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
-      <text class="userinfo-nickname">{{userInfo.nickName}}</text>
+      <view class="user_photo">
+        <image bindtap="bindViewTap" class="userinfo-avatar" src="{{userInfo.avatarUrl}}" mode="cover"></image>
+        <view>
+          <text class="userinfo-nickname">{{userInfo.nickName}}</text>
+          <view>123456789</view>
+        </view>
+      </view>
+      <view class="photo_rt">></view>
     </block>
-    <button hidden open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber">授权绑定手机号</button>
+    <button hidden open-type="getPhoneNumber" bindgetphonenumber="getPhoneNumber">授权绑定手机号
+    </button>
   </view>
+
+  <view class="myBuy">
+    <view class="buy_title">我的购买</view>
+    <view class="buy_content">
+      <view>
+        <image class="img1" src="../../resources/img/log.png" />
+        <view>我的订单</view>
+      </view>
+      <view>
+        <image class="img1" src="../../resources/img/mine.png" />
+        <view>我的服务</view>
+      </view>
+    </view>
+  </view>
+
+  <mp-cells ext-class="my_cells" title="我的资产">
+    <mp-cell value="我的优惠券" footer="3张可用" link hover>
+      <image slot="icon" src="../../resources/img/log.png" class="cell_img"/>
+    </mp-cell>
+  </mp-cells>
+  <mp-cells ext-class="my_cells" title="我的信息">
+    <mp-cell value="我的地址" footer="2条地址" link hover>
+      <image slot="icon" src="../../resources/img/mine.png" class="cell_img" />
+    </mp-cell>
+    <mp-cell value="发票信息" link hover>
+      <image slot="icon" src="../../resources/img/loged.png" class="cell_img" />
+    </mp-cell>
+    <mp-cell value="家庭信息" link hover>
+      <image slot="icon" src="../../resources/img/mined.png" class="cell_img" />
+    </mp-cell>
+  </mp-cells>
+</view>
