--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -1,1 +1,51 @@
 /* pages/mine/mine.wxss */
+.userinfo, .user_photo {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.userinfo {
+  padding: 20rpx 30rpx;
+}
+
+.userinfo-avatar {
+  width: 180rpx;
+  height: 180rpx;
+  border-radius: 50%;
+  margin-right: 20rpx;
+}
+
+.myBuy {
+  border-bottom: 20rpx solid #e6e6e6;
+}
+
+.buy_title {
+  padding: 20rpx 30rpx 40rpx;
+  font-weight: bold;
+}
+
+.buy_content {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding-bottom: 20rpx;
+}
+
+.my_cells {
+  border-bottom: 20rpx solid #e6e6e6;
+}
+
+.img1 {
+  width: 110rpx;
+  height: 110rpx;
+  display: block;
+  margin: 0 auto;
+}
+
+.cell_img {
+  width: 50rpx;
+  height: 50rpx;
+  vertical-align: middle;
+  margin-right: 30rpx;
+}
