--- a/pages/mall/sorts/sorts.wxml
+++ b/pages/mall/sorts/sorts.wxml
@@ -1,17 +1,17 @@
 <!--pages/mall/sorts/sorts.wxml-->
-<view>
+<view class="page">
   <view class="title">
     <text>全部商品</text>
-    <text>></text>
+    <text class="title_icon">></text>
   </view>
 
   <view wx:for="{{sortsData}}" wx:for-index="idx" wx:for-item="itemName">
     <view class="title">
       <text>{{itemName.title}}</text>
-      <text>查看全部></text>
+      <text class="title_icon">查看全部></text>
     </view>
     <view class="content_flex">
-      <view class="content" wx:for="{{itemName}}" wx:key="index">{{item}}</view>
+      <view class="content" wx:for="{{itemName.content}}" wx:key="index">{{item}}</view>
     </view>
   </view>
 </view>
