--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -11,7 +11,7 @@
     </view>
   </view>
   <!-- 轮播 -->
-  <view>
+  <view bindtap="bindToGoodsInfo">
    <swiper indicator-dots autoplay interval="2000" duration="500" circular>
     <block wx:for="{{imgSrc}}" wx:key="*this">
       <swiper-item>
@@ -25,7 +25,7 @@
   <!-- 导航 -->
   <view class="tab_wrap">
     <view class="tab_content" wx:for="{{tabContent}}" wx:key="index">
-      <view class="img_box {{item.bg}}">
+      <view class="img_box {{item.bg}}" bindtap="bindToView" data-idx="{{index}}">
         <image class="tab_img" src="{{item.imgSrc}}"/>
       </view>
       <text>{{item.txt}}</text>
