--- a/pages/goodsInfo/goodsInfo.wxml
+++ b/pages/goodsInfo/goodsInfo.wxml
@@ -3,5 +3,9 @@
   <view class="tab">
     <text class="tab_text {{index == navActive ? 'navActive' : ''}}" wx:for="{{tabData}}" wx:key="index" data-idx="{{index}}" bindtap="bindTabbar">{{item}}</text>
   </view>
+
+  <view>
+    <goods></goods>
+  </view>
 </view>
 
