--- a/pages/mine/myOrder/myOrder.wxml
+++ b/pages/mine/myOrder/myOrder.wxml
@@ -1,36 +1,35 @@
 <!--pages/mine/myOrder/myOrder.wxml-->
 <view>
   <view class="tabbar">
-    <view wx:for="{{tabData}}" wx:key="index" class="tab_text {{index == navActive ? 'navActive' : ''}}" bindtap="bindBar" data-idx="{{index}}">{{item}}</view>
+    <view wx:for="{{tabData}}" wx:key="index" class="tab_text {{index == navActive ? 'navActive' : ''}}" bindtap="bindBar" data-idx="{{index}}">{{item.name}}</view>
   </view>
+  <view wx:for="{{list}}">
+        <view class="content" >
+            <view class="content_top">
+              <text>订单编号：{{item.code}}</text>
+              <text style="color: red;">{{item.statusDes}}</text>
+            </view>
+            <view wx:for="{{item.entries}}" wx:for-index="idx" wx:for-item="entry" class="content_mid" bindtap="toOrderInfor">
+              <image style="width: 115rpx; height: 115rpx;" src="../../../resources/img/a.jpg" />
+              <view class="mid_rt">
+                <text class="mid_title">{{entry.productName}}</text>
+                <view style="font-size: 25rpx;">{{entry.productModel}}</view>
+                <view>￥{{entry.basePrice}}</view>
+                <view class="total">×{{entry.quantity}}</view>
+              </view>
+            </view>
 
-  <view class="content">
-    <view class="content_top">
-      <text>订单编号：1233dd</text>
-      <text style="color: red;">待付款</text>
-    </view>
-
-    <view class="content_mid" bindtap="toOrderInfor">
-      <image style="width: 115rpx; height: 115rpx;" src="../../../resources/img/a.jpg" />
-      <view class="mid_rt">
-        <text class="mid_title">家庭洗衣机家庭洗衣机家庭洗衣机家庭洗衣机家庭洗衣机abcdefg</text>
-        <view style="font-size: 25rpx;">DJIAHGOIE-DSAH9</view>
-        <view>￥999</view>
-        <view class="total">×99</view>
-      </view>
-    </view>
-
-    <view class="content_btm">
-      <view>
-        <text>付款金额</text>
-        <text>￥</text>
-        <text style="color: red;">350.00</text>
-      </view>
-      <view style="display: flex; justify-content: space-around;">
-        <view class="btn">取消订单</view>
-        <view class="btn btn2">立即付款</view>
-      </view>
-    </view>
+            <view class="content_btm">
+              <view>
+                <text>付款金额</text>
+                <text>￥</text>
+                <text style="color: red;">{{item.totalPrice}}</text>
+              </view>
+              <view style="display: flex; justify-content: space-around;">
+                <view class="btn">取消订单</view>
+                <view class="btn btn2">立即付款</view>
+              </view>
+            </view>
+         </view>
   </view>
-
 </view>
