--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -10,8 +10,8 @@
 }
 
 .userinfo-avatar {
-  width: 180rpx;
-  height: 180rpx;
+  width: 120rpx;
+  height: 120rpx;
   border-radius: 50%;
   margin-right: 20rpx;
 }
@@ -20,9 +20,11 @@
   border-bottom: 20rpx solid #e6e6e6;
 }
 
-.buy_title {
-  padding: 20rpx 30rpx 40rpx;
-  font-weight: bold;
+.buy_title, .weui-cells__title {
+  padding: 34rpx 34rpx;
+  font-size: 32rpx;
+  color: #2D313A;
+  margin: 0;
 }
 
 .buy_content {
@@ -34,18 +36,34 @@
 
 .my_cells {
   border-bottom: 20rpx solid #e6e6e6;
+  color: #2D313A;
+  font-size: 32rpx;
 }
 
 .img1 {
-  width: 110rpx;
-  height: 110rpx;
+  width: 64rpx;
+  height: 64rpx;
   display: block;
   margin: 0 auto;
 }
 
+.img1_title {
+  font-size: 36rpx;
+  color: #333333;
+}
+
 .cell_img {
-  width: 50rpx;
-  height: 50rpx;
+  width: 34rpx;
+  height: 34rpx;
   vertical-align: middle;
-  margin-right: 30rpx;
+  margin-right: 20rpx;
+}
+
+.weui-cell__ft {
+  font-size: 24rpx;
+}
+
+.photo_rt {
+  flex: 1;
+  text-align: right;
 }
