--- a/pages/mall/mall.wxml
+++ b/pages/mall/mall.wxml
@@ -3,8 +3,8 @@
 <!-- 搜索 -->
   <view class="top">
     <view class="top_lf">
-      <input class="lf_input" placeholder="请输入产品名称" type="text" confirm-type="search" />
-      <image class="lf_img" src="../../resources/img/search.png" />
+      <input class="lf_input" placeholder="请输入产品名称" type="text" confirm-type="search" placeholder-style="color: #999999; font-size: 28rpx;" />
+      <mp-icon class="lf_img" size="{{20}}" color="grey" icon="search"></mp-icon>
     </view>
     <view class="top_rt" bindtap="toSorts">
       <image class="rt_img" src="../../resources/img/sorts.png" />
@@ -12,7 +12,7 @@
   </view>
   <!-- 轮播 -->
   <view class="swiper_box">
-    <swiper indicator-dots autoplay interval="2000" duration="500" circular>
+    <swiper class="my_swiper" indicator-dots autoplay interval="2000" duration="500" circular>
       <block wx:for="{{swiperBanner}}" wx:key="index">
         <swiper-item>
           <view class="swiper_item">
@@ -30,7 +30,7 @@
   <view class="goods">
     <view class="goods_title">商品类别{{sum}}</view>
     <view class="swiper_wrap">
-      <swiper indicator-dots>
+      <swiper indicator-dots class="my_goods_swiper">
         <block wx:for="{{goodsData2}}" wx:key="index" wx:for-item="itemName">
           <swiper-item>
             <view class="flex_box">
@@ -47,7 +47,7 @@
     </view>
   </view>
   <!-- 套餐 -->
-  <view>
+  <view style="background-color: #ffffff;">
     <view class="package_title" bindtap="bindToSets">
       <text>套餐专区</text>
       <text class="package_title_rt">查看全部></text>
@@ -69,7 +69,7 @@
   </view>
 
   <!-- 商品推荐 -->
-  <view>
+  <view style="background-color: #ffffff;">
     <view class="recommend_title">
       <text>商品推荐</text>
       <text class="retitle_rt">查看全部></text>
@@ -78,7 +78,7 @@
       <view class="recontent_box" wx:for="{{recommendData}}" wx:key="index">
         <image class="recontent_img" src="{{item.imgSrc}}" />
         <view class="recontent_text">{{item.text}}</view>
-        <view style="color: red;">￥{{item.price}}</view>
+        <view class="re_price">￥{{item.price}}</view>
       </view>
     </view>
   </view>
