--- a/pages/mall/sorts/sorts.wxml
+++ b/pages/mall/sorts/sorts.wxml
@@ -2,13 +2,16 @@
 <view class="page">
   <view class="title">
     <text>全部商品</text>
-    <text class="title_icon">></text>
+    <mp-icon icon="arrow" size="{{10}}" color="#BEC2CB"></mp-icon>
   </view>
 
   <view wx:for="{{sortsData}}" wx:key="index" wx:for-item="itemName">
     <view class="title">
       <text>{{itemName.title}}</text>
-      <text class="title_icon">查看全部></text>
+      <view class="check_all">
+        <text style="margin-right: 15rpx;">查看全部</text>
+        <mp-icon icon="arrow" size="{{10}}"></mp-icon>
+      </view>
     </view>
     <view class="content_flex">
       <view class="content" wx:for="{{itemName.content}}" wx:key="index">{{item}}</view>
